force-app/main/default/objects/DTS_Amadeus_Entitlements__c/DTS_Amadeus_Entitlements__c.object-meta.xml
<CustomObject>
    <description>Stores the usage based entitlements of the integrated Amadeus systems for the cross org project. Child Object of Amadeus Organizations object 
//NICC-046831</description>
    <label>Amadeus Entitlements</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Resource</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amadeus Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>