force-app/main/default/objects/DTS_Amadeus_Entitlements__c/fields/AmadeusOrg__c.field-meta.xml
<CustomField>
    <fullName>AmadeusOrg__c</fullName>
    <label>Amadeus Org</label>
    <referenceTo>DTS_Amadeus_Organizations__c</referenceTo>
    <relationshipName>AmadeusEntitlements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>