force-app/main/default/objects/DTS_Amadeus_Entitlements__c/fields/EntitlementExtID__c.field-meta.xml
<CustomField>
    <fullName>EntitlementExtID__c</fullName>
    <description>Used as External ID in the backend processes</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Entitlement ExtID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>