force-app/main/default/objects/DTS_Amadeus_Entitlements__c/fields/EntitlementID__c.field-meta.xml
<CustomField>
    <fullName>EntitlementID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Entitlement ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>