force-app/main/default/objects/DTS_Amadeus_Entitlements__c/fields/ResourceID__c.field-meta.xml
<CustomField>
    <fullName>ResourceID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resource ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>