force-app/main/default/objects/DTS_Amadeus_Entitlements__c/fields/UsageDate__c.field-meta.xml
<CustomField>
    <fullName>UsageDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Usage Date Time</label>
    <type>DateTime</type>
</CustomField>