force-app/main/default/objects/DTS_Amadeus_Entitlements__c/listViews/Cross_Org_Entitlements.listView-meta.xml
<ListView>
    <fullName>Cross_Org_Entitlements</fullName>
    <columns>OrgName__c</columns>
    <columns>OrgID__c</columns>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Frequency__c</columns>
    <columns>Allowance__c</columns>
    <columns>AmountUsed__c</columns>
    <columns>UsageDate_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Cross Org Entitlements</label>
</ListView>